<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center_horizontal" android:id="@id/RelativeLayout01" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/ImageView01" android:layout_width="100.0dip" android:layout_height="100.0dip" android:src="@drawable/ratio" android:scaleType="fitXY" />
        <TextView android:id="@id/lbl_ratio" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/text_ScreenRatio" android:layout_toRightOf="@id/ImageView01" />
        <Spinner android:entries="@array/ratios" android:id="@id/spnRatioSelector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/ImageView01" android:layout_below="@id/lbl_ratio" android:layout_alignLeft="@id/lbl_ratio" />
        <TableLayout android:id="@id/TableLayout01" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/ImageView01">
            <TableRow android:id="@id/TableRow01" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_ScreenDiagonal" />
                <EditText android:id="@id/edit_Diagonal" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="" android:singleLine="true" android:numeric="decimal" />
                <TextView android:id="@id/lbl_ScreenDiagonalMeastureType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" />
            </TableRow>
            <TableRow android:id="@id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_ScreenWidth" />
                <EditText android:id="@id/edit_Width" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="" android:singleLine="true" android:numeric="decimal" />
                <TextView android:id="@id/lbl_ScreenWidthMeastureType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" />
            </TableRow>
            <TableRow android:id="@id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:id="@id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_ScreenHeight" />
                <EditText android:id="@id/edit_Height" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="" android:singleLine="true" android:numeric="decimal" />
                <TextView android:id="@id/lbl_ScreenHeightMeastureType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--" />
            </TableRow>
        </TableLayout>
        <TextView android:id="@id/lblToggleCmInch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_ToggleCM_INCH" android:layout_below="@id/TableLayout01" />
        <LinearLayout android:id="@id/linearLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/lblToggleCmInch" android:layout_centerHorizontal="true">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/text_ToggledINCH" />
            <CheckBox android:id="@id/tglCmInchButton" android:background="@drawable/switchbutton" android:layout_width="60.0dip" android:layout_height="60.0dip" android:button="@null" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/text_ToggledCM" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>